test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/scalar_initializer_for_static_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  double
  identifier(arr)
  [
  const int(3)
  ]
  =
  const double(1.0)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
